included delete endpoint with user reverse starts logic implemented